# bevy_light_2d_issue

./: Cargo.toml
.cargo/: config.toml
assets/: tbg.ldtk
src/: main.rs
